syntax = "proto3";


option java_multiple_files = true;
option java_package = "io.example.account.yandex.grpc";
option java_outer_classname = "YandexProto";

package yandex;

import "base.proto";

message VoidRequest {
}

message RedirectResponse {
  string url = 1;
}

message TokenRequest {
  string id = 1;
}

message CodeRequest {
  int64 id = 1;
}

message TokensResponse {
  string accessToken = 1;
  int64  expiresIn = 2;
  string refreshToken = 3;
}

service YandexService {
  rpc Redirect(VoidRequest) returns (RedirectResponse){}
  rpc GetUserData(TokenRequest) returns (base.UserDataResponse){}
  rpc UpdateYandexTokens(TokenRequest) returns (TokensResponse){}
}